Ignore pre build webpack files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
+################################################################################
+## Jekyll
+################################################################################
 .jekyll-metadata
 public
-src/assets/js/app.js
+site/assets/js/app.js
+site/assets/css/app.css
+
+################################################################################
+## Node
+################################################################################
 node_modules
+
+################################################################################
+## System files
+################################################################################
+.ds_store
