--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "bundle install && cd ./node_modules/properjs-hobo && npm install && npm run build -- 'append remove is one last'",
-    "build": "bundle install && run-s jekyll webpack",
-    "dev": "bundle install && run-s jekyll:dev webpack:dev",
+    "build": "bundle install && run-s webpack jekyll",
+    "dev": "bundle install && run-s webpack:dev jekyll:dev",
     "jekyll": "bundle exec jekyll build",
     "jekyll:dev": "JEKYLL_ENV=development bundle exec jekyll build",
     "jekyll:serve": "JEKYLL_ENV=development bundle exec jekyll serve",
     "browsersync": "browser-sync start --proxy 'localhost:4000' --files 'public'",
-    "start": " run-p server webpack:dev:watch",
+    "start": " run-p webpack:dev:watch server",
     "server": "run-p jekyll:serve browsersync",
     "webpack": "NODE_ENV=production webpack",
     "webpack:dev": "NODE_ENV=development webpack",
