Ignore production ready js files in lint config

--- a/.eslintignore
+++ b/.eslintignore
@@ -7,7 +7,6 @@
 ###############################################################################
 # JavaScript libraries
 ###############################################################################
-
 /node_modules/
 
 
@@ -19,5 +18,5 @@ webpack.*.js
 ###############################################################################
 # Production-Ready JavaScript
 ###############################################################################
-
+assets/js
 public/assets/js/
